--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "normalize.css": "^8.0.0",
     "postcss-color-function": "^4.0.1",
     "postcss-conditionals": "^2.1.0",
+    "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^11.1.0",
     "postcss-initial": "^2.0.0",
     "postcss-math": "0.0.10",
